fix(language-clojure): resolve lint config from nearest .clj-kondo in nested projects